[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/Level7/Wheel.tscn" type="PackedScene" id=1]
[ext_resource path="res://arts/car 1.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Level7/RobotSprite.tscn" type="PackedScene" id=3]
[ext_resource path="res://arts/подъёмник.png" type="Texture" id=4]
[ext_resource path="res://arts/пульт управления (1).png" type="Texture" id=5]
[ext_resource path="res://arts/Игра в режиме управления.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Level_7/MainScene.gd" type="Script" id=7]
[ext_resource path="res://arts/packages 2.png" type="Texture" id=8]
[ext_resource path="res://arts/robotic-arm 1.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 905.75, 14 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 908, 80.625 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 111, 15 )

[node name="MainScene" type="Node2D"]
position = Vector2( -2, -6 )
script = ExtResource( 7 )

[node name="bacground" type="TextureRect" parent="."]
margin_left = 2.0
margin_top = -40.0
margin_right = 1819.0
margin_bottom = 924.0
texture = ExtResource( 6 )
expand = true

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 945.0
margin_top = 369.0
margin_right = 1423.0
margin_bottom = 814.0
texture = ExtResource( 2 )
expand = true

[node name="wheel" parent="." instance=ExtResource( 1 )]
position = Vector2( 785, 181 )

[node name="wheel2" parent="." instance=ExtResource( 1 )]
position = Vector2( 525, 178 )

[node name="ceiling" type="StaticBody2D" parent="."]
position = Vector2( -1474, 63 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ceiling"]
position = Vector2( 2389, -19 )
shape = SubResource( 3 )

[node name="robot" type="StaticBody2D" parent="ceiling"]
position = Vector2( 1474, -63 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ceiling/robot"]
polygon = PoolVector2Array( 1051, 36, 1528, 36, 1527, 59, 1506, 61, 1509, 101, 1530, 104, 1527, 137, 1320, 132, 1319, 152, 1249, 152, 1243, 274, 1390, 218, 1390, 204, 1436, 198, 1451, 275, 1425, 280, 1435, 374, 1460, 366, 1470, 469, 1443, 483, 1443, 520, 1420, 523, 1422, 491, 1401, 488, 1400, 472, 1392, 398, 1412, 383, 1406, 280, 1390, 277, 1385, 258, 1230, 353, 1190, 345, 1174, 310, 1190, 275, 1185, 150, 1112, 152, 1117, 132, 1047, 132, 1047, 105, 1070, 105, 1076, 63, 1047, 64 )

[node name="Sprite" type="Sprite" parent="ceiling/robot"]
position = Vector2( 1288.75, 291.183 )
scale = Vector2( 1.03008, 1.04397 )
texture = ExtResource( 9 )

[node name="ColorRect" type="ColorRect" parent="ceiling"]
margin_left = 1477.0
margin_top = -33.0
margin_right = 3295.0
margin_bottom = -3.0
color = Color( 0.819608, 0.819608, 0.819608, 1 )

[node name="boxes2" type="StaticBody2D" parent="."]
position = Vector2( -1474, 63 )

[node name="Sprite" type="Sprite" parent="boxes2"]
position = Vector2( 1648, 463 )
scale = Vector2( 1.04128, 1.0188 )
texture = ExtResource( 8 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="boxes2"]
position = Vector2( -3, -2 )
polygon = PoolVector2Array( 1560, 262, 1682, 262, 1682, 354, 1820, 356, 1820, 668, 1477, 670, 1476, 516, 1513, 513, 1510, 417, 1559, 415 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 907, 838.625 )
shape = SubResource( 1 )

[node name="Node2D" parent="." instance=ExtResource( 3 )]
position = Vector2( -125, 160 )

[node name="car_holder" type="StaticBody2D" parent="."]
position = Vector2( 162, 130 )

[node name="Sprite" type="Sprite" parent="car_holder"]
position = Vector2( 1022, 534 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="car_holder"]
position = Vector2( 1016, 590 )
shape = SubResource( 2 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 114.0
margin_top = 618.0
margin_right = 154.0
margin_bottom = 658.0

[node name="wheel3" parent="." instance=ExtResource( 1 )]
position = Vector2( 3, 22 )

[node name="wheel4" parent="." instance=ExtResource( 1 )]
position = Vector2( -73, 164 )

[node name="wheel5" parent="." instance=ExtResource( 1 )]
position = Vector2( 623, -36 )

[node name="wheel6" parent="." instance=ExtResource( 1 )]
position = Vector2( 409, 56 )

[node name="TextureRect2" type="TextureRect" parent="."]
margin_left = -11.0
margin_top = 438.0
margin_right = 310.0
margin_bottom = 779.0
texture = ExtResource( 5 )
expand = true

[node name="boxes" type="StaticBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="boxes"]
position = Vector2( 1648, 463 )
scale = Vector2( 1.04128, 1.0188 )
texture = ExtResource( 8 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="boxes"]
polygon = PoolVector2Array( 1560, 262, 1682, 262, 1682, 354, 1820, 356, 1820, 668, 1477, 670, 1476, 516, 1513, 513, 1510, 417, 1559, 415 )

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
